--- a/index.css
+++ b/index.css
@@ -11,13 +11,13 @@
 .logo{
     width: 150px;
 }
-.list > ul{
+.nav-items > ul{
     display: flex;
     list-style-type: none;
     margin: 10px;
 }
 
-.list>ul>li{
+.nav-items > ul >li{
     padding: 10px 20px;
     margin: 0px 30px;
     font-size:20px ;
@@ -64,4 +64,9 @@
     background-color: gray;
     padding: 5px;
     border-radius: 5px;
+}
+
+.btn{
+    cursor: pointer;
+    background-color: greenyellow;
 }
